tests/integration/tests/di/ui/fail/injectable_factory_mixed_params.stderr
error: #[injectable_factory] functions must have all parameters marked with #[inject]. Non-inject parameters are not supported because the generated wrapper function only receives an InjectionContext.
  --> tests/di/ui/fail/injectable_factory_mixed_params.rs:12:1
   |
12 | async fn make_service(#[inject] _config: reinhardt_di::Depends<String>, extra: String) -> MyService {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
